more court rulings

--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -378,6 +378,78 @@
   gender = {sn},
   url = {http://piraten-bsg.de/#1925409203}
 }
+@RULING{BSG20121128,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 2012-11-28},
+  date = {2013-01-28},
+  gender = {sn},
+  url = {http://piraten-bsg.piratenpartei-rhein-erft.de/#1482024687}
+}
+@RULING{BSG20130116,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 2013-01-16},
+  date = {2013-02-04},
+  gender = {sn},
+  url = {http://piraten-bsg.piratenpartei-rhein-erft.de/#1926362482}
+}
+@RULING{BSG2314HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 23/14-H S},
+  date = {2014-06-12},
+  gender = {sn},
+  url = {http://piraten-bsg.piratenpartei-rhein-erft.de/#2062924331}
+}
+@RULING{BSG2214HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 22/14-H S},
+  date = {2014-05-29},
+  gender = {sn},
+  url = {http://piraten-bsg.piratenpartei-rhein-erft.de/#489232630}
+}
+@RULING{BSG2114HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 21/14-H S},
+  date = {2014-06-12},
+  gender = {sn},
+  url = {http://piraten-bsg.piratenpartei-rhein-erft.de/#1253577705}
+}
+@RULING{BSG1714HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 17/14-H S},
+  date = {2014-05-29},
+  gender = {sn},
+  url = {http://piraten-bsg.piratenpartei-rhein-erft.de/#1874163120}
+}
+@RULING{BSG201305151,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 2013-05-15-1},
+  date = {2013-06-24},
+  gender = {sn},
+  url = {http://piraten-bsg.piratenpartei-rhein-erft.de/#11076461}
+}
+@RULING{BSG201306071,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 2013-06-07-1},
+  date = {2013-06-24},
+  gender = {sn},
+  url = {http://piraten-bsg.piratenpartei-rhein-erft.de/#39677743}
+}
 @RULING{BSG3615HS,
   court = {Bundesschiedsgericht},
   shortcourt = {BSG},
@@ -494,6 +566,44 @@
   date = {2013-06-10},
   gender = {sn},
   url = {http://piraten-bsg.de/#11047632}
+}
+
+
+@RULING{FGHE4K140613,
+  court = {Finanzgericht Hessen},
+  shortcourt = {FG Hessen},
+  decisiontype = {Urteil},
+  sign = {4 K 1406/13},
+  journaltitle = {openJur},
+  journalyear = {2013},
+  journalpage = {43957},
+  date = {2013-10-09},
+  gender = {sn},
+  url = {https://openjur.de/u/659289.html}
+}
+@RULING{VFFFO7K62610,
+  court = {Verwaltungsgericht Frankfurt (Oder)},
+  shortcourt = {VG Frankfurt (Oder)},
+  decisiontype = {Urteil},
+  sign = {7 K 626/10},
+  journaltitle = {openJur},
+  journalyear = {2011},
+  journalpage = {15621},
+  date = {2011-07-12},
+  gender = {sn},
+  url = {https://openjur.de/u/285012.html}
+}
+@RULING{BVerfGE61126,
+  court = {Bundesverfassungsgericht},
+  shortcourt = {BVerfG},
+  decisiontype = {Urteil},
+  sign = {1 BvL 34/80; 1 BvL 55/80},
+  journaltitle = {BVerfGE},
+  journalyear = {61},
+  journalpage = {126},
+  date = {1982-10-19},
+  gender = {sn},
+  url = {http://www.hartzkampagne.de/urteile/86.htm}
 }
 @RULING{BGHIIARZ101,
   court = {Bundesgerichtshof},
