--- a/Anrufung.tex
+++ b/Anrufung.tex
@@ -390,7 +390,7 @@ In dieser Übernahmemitteilung sollten den Parteien alle Mitteilungen gemacht we
 Die Vorschriften über die Eröffnung sind dabei mangels eigener Regelung für die Verweisung analog anzuwenden.
 
 Eine besondere Aufmerksamkeit gilt fehlerhaften Verweisungsbeschlüssen:
-Diese sind gültig und mangels Rechtsmittelfähigkeit\footnote{\S~13 Abs.~6 Satz~1 SGO\index[paridx]{SGO!13@\S~13!6@Abs.~6} erlaubt nur in den Fällen, in denen es explizit durch die SGO vorgesehen ist, eine Beschwerde.}  auch nicht im Instanzenzug \textbf{isoliert angreifbar}.
+Diese sind gültig und mangels Rechtsmittelfähigkeit\footnote{\S~13 Abs.~6 Satz~1 SGO\index[paridx]{SGO!13@\S~13!6@Abs.~6} erlaubt nur in den Fällen, in denen es explizit durch die SGO vorgesehen ist, eine Beschwerde. Vgl. hierzu \cites{BSG201305151}{BSG201306071}.}  auch nicht im Instanzenzug \textbf{isoliert angreifbar}.
 Ein fehlerhafter Verweisungsbeschluss ist daher bestandskräftig und somit rechtswirksam und begründet die Zuständigkeit des Zielgerichtes.\footnote{Vgl. dazu etwa \cite[5]{LSGBB147}.}
 Allerdings dürfte diese Rechtsfrage auch nie zur Entscheidung vor der ordentlichen Gerichtsbarkeit landen, da das Bundesschiedsgericht immer letzinstanzlich zu entscheiden hat.
 Da das Bundesschiedsgericht aber eine vollständige Tatsacheninstanz ist und eine eigene Entscheidung trifft, ist ein derartiger Fehler in der ersten Instanz für die ordentliche Gerichtsbarkeit nicht mehr relevant, da diese nur die ausschlaggebende Entscheidung des Bundesschiedsgerichtes zu berücksichtigen hat, das als solches auch die Instanzengarantie im Sinne des \S~10 Abs.~5 Satz~2 SGO\index[paridx]{SGO!10@\S~10!5@Abs.~5} erfüllt.
