--- a/Anrufung.tex
+++ b/Anrufung.tex
@@ -305,7 +305,7 @@ Dabei ist relevant, sich für jedes Kritrium und seine Bestimmungen einzeln anzu
 Grundsätzlich gilt dabei:
 Die Fakten müssen vollständig zutreffen, aber die Informationen über diese Fakten können in einigen Fällen noch während des Verfahrens nachgeliefert werden.
 Und zwar ist ein solcher Nachtrag von Fakten immer möglich, wenn es Teil der Verhandlung ist, ebendiese Informationen zu ermitteln.
-Das ist damit auch das Unterscheidungskriterium zwischen unechten Zulässigkeitskriterien, die bereits mit Eröffnung zu entscheiden sind, und echten Zulässigkeitskriterien, die erst im Prozessurteil beschieden werden müssen.\footnote{Vergleiche zu echten Zulässigkeitskriterien die Ausführungen im Abschnitt Zulässigkeit.}
+Das ist damit auch das Unterscheidungskriterium zwischen unechten Zulässigkeitskriterien, die bereits mit Eröffnung zu entscheiden sind, und echten Zulässigkeitskriterien, die erst im Prozessurteil beschieden werden müssen.\footnote{Vergleiche zu echten Zulässigkeitskriterien die Ausführungen im Abschnitt Zulässigkeit, S.~\pageref{Zulaessigkeit}.}
 Das Musterbeispiel für einen solchen Nachtrag dürften Informationen über Sachverhalt und Begründung der Klage sein, deren Ermittlung ja gerade Haupttätigkeit im Verfahren ist.
 Mit anderen Worten:
 Alle Entscheidungen, die zwangsläufig auf Ermittlung und Wertungen des Gerichts und dem Vortrag der Streitparteien beruhen, sind im Zweifel echte Zulässigkeitsvorraussetzungen und erst mit dem Endurteil zu bescheiden.
