--- a/Zulaessigkeit.tex
+++ b/Zulaessigkeit.tex
@@ -4,12 +4,98 @@ Form und Frist der Anrufung, Zuständigkeit für das Verfahren und Erfolglosigke
 Die Klage ist grundsätzlich gegen das jeweilige Organ zu richten.
 Klagen gegen Einzelmitglieder, losgelöst von ihrer Funktion, sieht die SGO nicht vor.}
 
-\chapter{Zulässigkeit der Klagebehren}
+\chapter{Zulässigkeit der Klage}
+\label{Zulaessigkeit}
 %\blindtext[1]
 %\section{Klagegegner (Richtige Auswahl, Vielzahl von Gegnern etc.)}
 %\blindtext[5]
 %\section{Grundlagen Beweiswürdigung}
 %\blindtext[5]
 
-%\chapterbib
+Die Entscheidung über die Eröffnung einer Klage ist nicht identisch mit deren Zulässigkeit.
+So müssen bei Eröffnung noch nicht alle Fragen der Zulässigkeit entschieden werden.
+Manche werden erst mit dem Urteil entschieden, teilweise ist auch eine Entscheidung erst dann abschließend möglich.
+Dennoch überschneidet sich die Zulässigkeit einer Klage --- so wie sie im Urteil zu bescheiden ist --- streng genommen mit einigen Fragen, die bereits bei Eröffnung zu entscheiden sind.
+Diese Fragen wurden in diesem Handbuch bereits im Abschnitt über die Eröffnung nach Anrufung unter \ref{Anrufung} behandelt und dort entsprechend auch als unechte Zulässigkeitkrtiterien benannt.
+
+Da in der Regel der (positive) Eröffnungsbeschluss nicht weiter begründet oder gar veröffentlicht wird, ist im das Verfahren abschließenden Urteil kurz darzulegen, wie es um die Zulässigkeit der Klage auch in hinsicht auf die bereits mit Eröffnung beschiedenen Kriterien steht.
+
+Die Gründe, warum eine unzulässige Klage nicht durch einen Nichteröffnungsbeschluss abgelehnt wird, der eine entsprechende Begründung bereits enthalten muss, sondern erst durch das Endurteil, lassen sich schnell in zwei Gruppen einteilen:
+\begin{enumerate}
+\item Nichtvorliegen einer echten Zulässigkeitsvorraussetzung
+\item Wegfall oder später sich herausstellendes Nichtvorliegen einer unechten Zulässigkeitsvorraussetzung bzw. einer Statthaftigkeitsvoraussetzung.
+\end{enumerate}
+
+\section{Wegfall einer unechten Zulässigkeitsvorraussetzung}
+\label{Zulaessigkeit:Wegfall}
+Fällt nach Eröffnung eine unechte Zulässigkeitsvorraussetzung weg oder stellt sich heraus, dass dieses von Beginn an nicht vorlag, ist die Klage als unzulässig abzuweisen.
+Zum jeweiligen Maßstab wird auf das bereits ausgeführte ab S. \pageref{Anrufung:Statthaftigkeit} ff. verwiesen.
+
+Wichtig ist dabei besonders auf die Rechte der klagenden Partei zu achten und dieser daher Gelegenheit zur Nachbesserung zu geben, da das Verfahren bereits eröffnet wurde.
+Zur Nachbesserung im Allgemeinen wird auf den Abschnitt \ref{Anrufung:Beschluss:Nachbesserung} (S. \pageref{Anrufung:Beschluss:Nachbesserung}) verwiesen.
+Wird nicht nachgebessert, ist ein Endurteil zu erlassen, dass die Klage aus dem nicht nachgebesserten Grund als unzulässig ablehnt.
+
+Eine Rücknahme der Eröffnung nicht möglich, da sie in der SGO nicht vorgesehen ist.
+Insbesondere eine analoge Anwendung des \S~10 Abs.~1 SGO\index[paridx]{SGO!10@\S~10!1@Abs.~1} scheidet aus\footnote{So aber fehlerhaft das Bundesschiedsgericht, \cite{BSGPP100127862}.}, dies allein schon, da dieser Absatz der SGO das Verfahren und nicht etwa die Eröffnung regelt.\footnote{Dieser Beschluss ist in \S~8 Abs.~5 SGO\index[paridx]{SGO!8@\S~8!5@Abs.~5} geregelt.}
+
+\subsection{Fehlende Schlichtung}
+\label{Zulaessigkeit:Wegfall:Schlichtung}
+Die fehlender Schlichtung nimmt eine besondere Position ein.
+Lag keine Schlichtung vor und das Verfahren wurde dennoch eröffnet, hat die Gegenseite keine Möglichkeit mehr, sich auf die fehlende Schlichtung zu berufen.
+Der Eröffnungsbeschluss hat insofern den Bestandsschutz für die klagende Partei eröffnet.
+Diese darf darauf Vertrauen, dass der im Eröffnungsbeschluss mindestens implizite festgestellte Wegfall der Schlichtungserfordernis bestand hat.
+Somit kann eine Klage nach Eröffnung nicht mehr als unzulässig abgewiesen werden, weil es keinen Schlichtungsversuch gab.
+
+\subsection{Gliederungswechsel, Austritt und Ausschluss}
+\label{Zulaessigkeit:Wegfall:Austritt}
+Die häufigste Variante für ein Wegfallen einer unechten Zulässigkeitsvorraussetzung dürfte der Austritt aus einer Gliederung (durch Wechsel) oder der Gesamtpartei sein.\footnote{Vgl. dazu entsprechende Rechtsprechung des Bundesschiedsgerichtes, \cites{BSG20121128}{BSG20130116}}
+
+In diesem Fall liegt kein Zugang mehr für die Streitpartei zur Parteischiedsgerichtsbarkeit mehr vor und deren Zuständigkeit endet damit.
+Im Fall des Gliederungswechsels stellen Einspruchsverfahren gegen Ordnungsmaßnahmen und Parteiausschlussverfahren eine Ausnahme dar, da ansonsten die Disziplinargewalt der Partei und ihrer Gliederungen bzw. der Rechtsschutzanspruch des Mitglieds unterlaufen würde.
+Ein Gliederungswechsel dürfte während eines solchen laufenden Verfahrens ohnehin nur zulässig sein, wenn ein tatsächlicher Wohnsitzwechsel vorliegt, da ein solch laufendes Verfahren das Musterbeispiel eines Grundes für eine Versagung der freien Gliederungswahl nach \S~3 Abs.~2a Satz~2 BS\index[paridx]{BS!3@\S~3!2a@Abs.~2a} (\enquote{[\dots] nachhvollziehbare Gründe, die den Organisationsinteressen nicht entgegenstehen [\dots]}) darstellen dürfte.
+
+Das gilt natürlich auch bei Ausschluss aus der Partei\footnote{Siehe hierzu auch \cite{BSG2314HS}.} oder Austritt des Verfahrensgegners.\footnote{Vgl. hierzu lediglich einen Nichteröffnungsbeschluss zu einer Berufung \cite{BSG2214HS}.}
+Während der Tod des Mitglieds das Mitgliedschaftsverhältnis beendet und somit ein Mitglied als Streitpartei im Verfahren nicht beerbt werden kann, tritt im Falle einer Auflösung einer Gliederung immer eine andere Gliederung oder notfalls der Bundesverband die Rechtsnachfolge an und das Verfahren ist ggf. mit dem Rechtsnachfolger der urspründlichen Streitpartei weiterzuführen.
+
+Im Falle des Austritts aus der Gesamtpartei endet die Zuständigkeit der Parteischiedsgerichtsbarkeit insgesamt, ein Urteil in der Sache würde dem Justizgewährungsanspruch der Streitparteien in Verbindung mit dem staatlichen Gewaltmonopol zuwiederlaufen.
+
+\subsection{Andere Wegfallsgründe}
+\label{Zulaessigkeit:Wegfall:Anderes}
+In der Praxis relevant dürfte ansonsten noch die Erledigung werden.
+Erledigt sich der Rechtsstreit, etwa weil der begehrte Anspruch erfüllt wurde, bedarf es keiner Entscheidung des Parteischiedsgerichtes mehr.\footnote{Vgl. hierzu etwa das obiter dictum in \cite{BSG1714HS} und die Bescheidung der Anträge I. und II. in \cite{BSG2114HS}.}
+Die Klage ist daher dann als unzulässig abzuweisen, wenn sie nicht von der klagenden Partei zurückgenommen wird.
+
+
+\section{Nichtvorliegen einer echten Zulässigkeitsvorraussetzung}
+\label{Zulaessigkeit:Nichtvorliegen}
+Das Nichtvorliegen einer echten Zulässigkeitsvorraussetzung tritt vergleichsweise eher selten auf.
+Das liegt schon daran, dass die Anzahl der Kriterien, die nicht vorliegen können, ungleich kleiner sind.
+In der Praxis wohl relevant werden können ein fehlendes Rechtsschutzbedürfnis, die entgegenstehende Rechtskraft eines anderen Urteils und die fehlende Antragsbefugnis.
+
+\subsection{Fehlendes Rechtsschutzbedürfnis}
+\label{Zulaessigkeit:Nichtvorliegen:Rechtsschutzbeduerfnis}
+Das fehlende Rechtsschutzbedürfnis ist ein Klassiker der echten Zulässigkeitskriterien.
+Jeder Antrag an ein Gericht setzt ein allgemeines Rechtsschutzbedürfnis voraus.
+Dadurch sollen gerichtliche Verfahren unterbunden werden, in denen der Rechtsschutzsuchende eine Verbesserung seiner Rechtsstellung nicht erreichen kann, das Rechtsschutzbegehren mithin nutzlos ist.\footnote{Vgl. \cite{BVerfGE61126}.}
+Lässt eine Partei etwa erkennen, dass sie die Autorität des Gericht von vorn herein nicht anerkennt, gibt es auch keinen Grund, warum eine Schlichtung des Streits (die originäre Funktion der Parteischiedsgerichte) durch die Entscheidung folgen sollte.
+In einem solchen Fall hat eine Streitpartei kein Rechtsschutzbedürfnis.\footnote{Vgl. hierzu etwa \cites{FGHE4K140613}{VFFFO7K62610}}
+Ein Rechtsschutzbedürfnis liegt auch dann nicht vor, wenn eine Verfahrenspartei sich so verhalten hat, dass sie ihren Anspruch auf Rechtsschutz verwirkt hat, weil etwa ihr ganzes Verhalten widersprüchlich zum Beantragten ausgerichtet ist.
+
+\subsection{Entgegenstehende Rechtskraft}
+\label{Zulaessigkeit:Nichtvorliegen:Rechtskraft}
+Entgegenstehende Rechtskraft liegt vor, wenn ein anderes Urteil zwischen diesen exakt diesen Streitparteien exakt die selbe Streitfrage schon entschieden hat.
+Diese Frage ist wie alle Fragen Antragsweise zu entscheiden.
+Wurde etwa der Antrag eines Mitglieds auf Aufhebung eines Beschlusses eines wegen dessen Rechtswidrigkeit schon einmal abgelehnt, kann das selbe Mitglied das nicht erneut in einem anderen Verfahren beantragen.
+Dies dient der Verfahrensökonomik, damit Gericht nicht zugespammt werden.
+Die Schiedsgerichtsordnung sieht eine Nichteröffnung wegen entgegenstehender Rechtskraft nicht vor, jedoch wird im Sinne der Verfahrensökonomik bei offensichtlich vorliegender entgegenstehender Rechtkraft auch ein direkter Nichteröffnungsbeschluss in analoger Anwendung von dessen Vorschriften möglich sein.
+Da die entgegenstehende Rechtskraft aber erst ein zweites Urteil verbietet (da dann sich Urteile widersprechen könnten) ist sie noch als echtes Zulässigkeitkrtiterium einzuordnen.
+
+\subsection{Fehlende Antragsbefugnis}
+\label{Zulaessigkeit:Nichtvorliegen:Antragsbefugnis}
+Die Antragsbefugnis ist bereits Teil der Eröffnung, vgl. hierzu bereits die Ausführungen im Abschnitt \ref{Anrufung:Kriterien:Antragsbefugnis}.
+In der Eröffnung ist jedoch nur zu prüfen, ob ein Grund für eine Antragsbefugnis behauptet wurde und ob dieser nicht komplett unplausibel ist.
+Für das Urteil hingegen ist vollständig zu prüfen, ob die behauptete Antragsbefugnis rechtlich existieren kann (dies als Teil der Zulässigkeit) und ob diese existiert (dies ist dann die materielle Prüfung oder auch Begründetheit des Urteils).
+Da hierfür aber der Parteivortrag beider Seiten beachtet werden muss und teilweise sogar schon Beweiserhebungen nötig sind, kann dies erst im Verfahren erfolgen und erfordert ggf. richterliche Wertungen, weswegen die Antragsbefugnis als echtes Zulässigkeitkrtiterium erst im Endurteil beschieden werden kann.
+
+\chapterbib
 % \end{refsection}
