--- a/Zulaessigkeit.tex
+++ b/Zulaessigkeit.tex
@@ -31,12 +31,12 @@ Die Gründe, warum eine unzulässige Klage nicht durch einen Nichteröffnungsbes
 Fällt nach Eröffnung eine unechte Zulässigkeitsvorraussetzung weg oder stellt sich heraus, dass dieses von Beginn an nicht vorlag, ist die Klage als unzulässig abzuweisen.
 Zum jeweiligen Maßstab wird auf das bereits ausgeführte ab S. \pageref{Anrufung:Statthaftigkeit} ff. verwiesen.
 
-Wichtig ist dabei besonders auf die Rechte der klagenden Partei zu achten und dieser daher Gelegenheit zur Nachbesserung zu geben, da das Verfahren bereits eröffnet wurde.
+Wichtig ist dabei, besonders auf die Rechte der klagenden Partei zu achten und dieser daher Gelegenheit zur Nachbesserung zu geben, da das Verfahren bereits eröffnet wurde.
 Zur Nachbesserung im Allgemeinen wird auf den Abschnitt \ref{Anrufung:Beschluss:Nachbesserung} (S. \pageref{Anrufung:Beschluss:Nachbesserung}) verwiesen.
 Wird nicht nachgebessert, ist ein Endurteil zu erlassen, dass die Klage aus dem nicht nachgebesserten Grund als unzulässig ablehnt.
 
 Eine Rücknahme der Eröffnung nicht möglich, da sie in der SGO nicht vorgesehen ist.
-Insbesondere eine analoge Anwendung des \S~10 Abs.~1 SGO\index[paridx]{SGO!10@\S~10!1@Abs.~1} scheidet aus\footnote{So aber fehlerhaft das Bundesschiedsgericht, \cite{BSGPP100127862}.}, dies allein schon, da dieser Absatz der SGO das Verfahren und nicht etwa die Eröffnung regelt.\footnote{Dieser Beschluss ist in \S~8 Abs.~5 SGO\index[paridx]{SGO!8@\S~8!5@Abs.~5} geregelt.}
+Insbesondere eine analoge Anwendung des \S~10 Abs.~1 SGO\index[paridx]{SGO!10@\S~10!1@Abs.~1} scheidet aus,\footnote{So aber fehlerhaft das Bundesschiedsgericht, \cite{BSGPP100127862}.} dies allein schon, da dieser Absatz der SGO das Verfahren und nicht etwa die Eröffnung regelt.\footnote{Dieser Beschluss ist in \S~8 Abs.~5 SGO\index[paridx]{SGO!8@\S~8!5@Abs.~5} geregelt.}
 
 \subsection{Fehlende Schlichtung}
 \label{Zulaessigkeit:Wegfall:Schlichtung}
@@ -48,9 +48,9 @@ Somit kann eine Klage nach Eröffnung nicht mehr als unzulässig abgewiesen werd
 
 \subsection{Gliederungswechsel, Austritt und Ausschluss}
 \label{Zulaessigkeit:Wegfall:Austritt}
-Die häufigste Variante für ein Wegfallen einer unechten Zulässigkeitsvorraussetzung dürfte der Austritt aus einer Gliederung (durch Wechsel) oder der Gesamtpartei sein.\footnote{Vgl. dazu entsprechende Rechtsprechung des Bundesschiedsgerichtes, \cites{BSG20121128}{BSG20130116}}
+Die häufigste Variante für ein Wegfallen einer unechten Zulässigkeitsvorraussetzung dürfte der Austritt aus einer Gliederung (durch Wechsel) oder der Gesamtpartei sein.\footnote{Vgl. dazu entsprechende Rechtsprechung des Bundesschiedsgerichtes, \cites{BSG20121128}{BSG20130116}.}
 
-In diesem Fall liegt kein Zugang mehr für die Streitpartei zur Parteischiedsgerichtsbarkeit mehr vor und deren Zuständigkeit endet damit.
+In diesem Fall liegt für die Streitpartei kein Zugang mehr zur Parteischiedsgerichtsbarkeit vor und deren Zuständigkeit endet damit.
 Im Fall des Gliederungswechsels stellen Einspruchsverfahren gegen Ordnungsmaßnahmen und Parteiausschlussverfahren eine Ausnahme dar, da ansonsten die Disziplinargewalt der Partei und ihrer Gliederungen bzw. der Rechtsschutzanspruch des Mitglieds unterlaufen würde.
 Ein Gliederungswechsel dürfte während eines solchen laufenden Verfahrens ohnehin nur zulässig sein, wenn ein tatsächlicher Wohnsitzwechsel vorliegt, da ein solch laufendes Verfahren das Musterbeispiel eines Grundes für eine Versagung der freien Gliederungswahl nach \S~3 Abs.~2a Satz~2 BS\index[paridx]{BS!3@\S~3!2a@Abs.~2a} (\enquote{[\dots] nachhvollziehbare Gründe, die den Organisationsinteressen nicht entgegenstehen [\dots]}) darstellen dürfte.
 
@@ -78,16 +78,17 @@ Das fehlende Rechtsschutzbedürfnis ist ein Klassiker der echten Zulässigkeitsk
 Jeder Antrag an ein Gericht setzt ein allgemeines Rechtsschutzbedürfnis voraus.
 Dadurch sollen gerichtliche Verfahren unterbunden werden, in denen der Rechtsschutzsuchende eine Verbesserung seiner Rechtsstellung nicht erreichen kann, das Rechtsschutzbegehren mithin nutzlos ist.\footnote{Vgl. \cite{BVerfGE61126}.}
 Lässt eine Partei etwa erkennen, dass sie die Autorität des Gericht von vorn herein nicht anerkennt, gibt es auch keinen Grund, warum eine Schlichtung des Streits (die originäre Funktion der Parteischiedsgerichte) durch die Entscheidung folgen sollte.
-In einem solchen Fall hat eine Streitpartei kein Rechtsschutzbedürfnis.\footnote{Vgl. hierzu etwa \cites{FGHE4K140613}{VFFFO7K62610}}
+In einem solchen Fall hat eine Streitpartei kein Rechtsschutzbedürfnis.\footnote{Vgl. hierzu etwa \cites{FGHE4K140613}{VGFFO7K62610}.}
+\nomenclature{FG}{Finanzgericht}\nomenclature{VG}{Verwaltungsgericht}
 Ein Rechtsschutzbedürfnis liegt auch dann nicht vor, wenn eine Verfahrenspartei sich so verhalten hat, dass sie ihren Anspruch auf Rechtsschutz verwirkt hat, weil etwa ihr ganzes Verhalten widersprüchlich zum Beantragten ausgerichtet ist.
 
 \subsection{Entgegenstehende Rechtskraft}
 \label{Zulaessigkeit:Nichtvorliegen:Rechtskraft}
-Entgegenstehende Rechtskraft liegt vor, wenn ein anderes Urteil zwischen diesen exakt diesen Streitparteien exakt die selbe Streitfrage schon entschieden hat.
-Diese Frage ist wie alle Fragen Antragsweise zu entscheiden.
-Wurde etwa der Antrag eines Mitglieds auf Aufhebung eines Beschlusses eines wegen dessen Rechtswidrigkeit schon einmal abgelehnt, kann das selbe Mitglied das nicht erneut in einem anderen Verfahren beantragen.
-Dies dient der Verfahrensökonomik, damit Gericht nicht zugespammt werden.
-Die Schiedsgerichtsordnung sieht eine Nichteröffnung wegen entgegenstehender Rechtskraft nicht vor, jedoch wird im Sinne der Verfahrensökonomik bei offensichtlich vorliegender entgegenstehender Rechtkraft auch ein direkter Nichteröffnungsbeschluss in analoger Anwendung von dessen Vorschriften möglich sein.
+Entgegenstehende Rechtskraft liegt vor, wenn ein anderes Urteil zwischen exakt diesen Streitparteien exakt dieselbe Streitfrage schon entschieden hat.
+Diese Frage ist, wie alle Fragen, antragsweise zu entscheiden.
+Wurde etwa der Antrag eines Mitglieds auf Aufhebung eines Beschlusses wegen dessen Rechtswidrigkeit schon einmal abgelehnt, kann dasselbe Mitglied das nicht erneut in einem anderen Verfahren beantragen.
+Dies dient der Verfahrensökonomie, damit Gericht nicht \enquote{zugespammt} werden.
+Die Schiedsgerichtsordnung sieht eine Nichteröffnung wegen entgegenstehender Rechtskraft nicht vor, jedoch wird im Sinne der Verfahrensökonomie bei offensichtlich vorliegender entgegenstehender Rechtkraft auch ein direkter Nichteröffnungsbeschluss in analoger Anwendung von dessen Vorschriften möglich sein.
 Da die entgegenstehende Rechtskraft aber erst ein zweites Urteil verbietet (da dann sich Urteile widersprechen könnten) ist sie noch als echtes Zulässigkeitkrtiterium einzuordnen.
 
 \subsection{Fehlende Antragsbefugnis}
