--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -581,7 +581,7 @@
   gender = {sn},
   url = {https://openjur.de/u/659289.html}
 }
-@RULING{VFFFO7K62610,
+@RULING{VGFFO7K62610,
   court = {Verwaltungsgericht Frankfurt (Oder)},
   shortcourt = {VG Frankfurt (Oder)},
   decisiontype = {Urteil},
