--- a/Zulaessigkeit.tex
+++ b/Zulaessigkeit.tex
@@ -42,7 +42,7 @@ Insbesondere eine analoge Anwendung des \S~10 Abs.~1 SGO\index[paridx]{SGO!10@\S
 \label{Zulaessigkeit:Wegfall:Schlichtung}
 Die fehlender Schlichtung nimmt eine besondere Position ein.
 Lag keine Schlichtung vor und das Verfahren wurde dennoch eröffnet, hat die Gegenseite keine Möglichkeit mehr, sich auf die fehlende Schlichtung zu berufen.
-Der Eröffnungsbeschluss hat insofern den Bestandsschutz für die klagende Partei eröffnet.
+Der Eröffnungsbeschluss hat insofern einen Vertrauensschutz für die klagende Partei eröffnet.
 Diese darf darauf Vertrauen, dass der im Eröffnungsbeschluss mindestens implizite festgestellte Wegfall der Schlichtungserfordernis bestand hat.
 Somit kann eine Klage nach Eröffnung nicht mehr als unzulässig abgewiesen werden, weil es keinen Schlichtungsversuch gab.
 
