quote roter oktober

--- a/Anrufung.tex
+++ b/Anrufung.tex
@@ -1,8 +1,5 @@
 % \begin{refsection}
-\chapterpreamble{Trifft eine Anrufung beim Schiedsgericht ein, ist zu prüfen ob der Antragsteller antragsberechtigt ist (\S~8 Abs.~1 SGO) und ob die Anrufung formell vollständig ist (\S~8 Abs.~3 SGO).
-Die fristgerechte Klageerhebung ist bereits im Rahmen der Anrufung zu prüfen.
-Nur bei Zweifeln, die sich nicht ohne Ermittlungen klären lassen, ist das Verfahren zu eröffnen.
-Die Anschrift i.S.d. \S~8 Abs.~3 S.~1 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} kann auch aus einer Postfachadresse bestehen.}
+\chapterpreamble{\enquote{\enquote{Gestatten Sie das?} -- \textit{(nickt)} -- \enquote{Ohne Papiere?} -- \enquote{Ohne Papiere!}} --- Jagd auf Roter Oktober (US, 1990).}
 
 \chapter{Die Anrufung}
 \label{Anrufung}
