unanfechtbare, verfahrensleitende Beschlüsse

--- a/Dokumentation.tex
+++ b/Dokumentation.tex
@@ -92,9 +92,15 @@ Zudem besteht für die Beteiligten die Möglichkeit des Rechtsmittelgebrauchs, d
 \index[idx]{Beschluss!Unanfechtbarkeit}
 Nicht anfechtbar sind bspw. die Eröffnung eines Verfahrens gemäß \SSS~8 Abs.~6 S.~1, 9 Abs.~1 S.~1~SGO,\index[paridx]{SGO!8@\S~8!6@Abs.~6}\index[paridx]{SGO!9@\S~9!1@Abs.~1} der Ausschluss eines Mitglieds des Spruchkörpers wegen der Besorgnis der Befangenheit (\S~5 Abs.~6 S.~1~SGO\index[paridx]{SGO!5@\S~5!6@Abs.~6}), sowie die Anordnungen der Schiedsgerichte zu Fristen, über Beweisanträge (vgl. \S~10 Abs.~1 S.~2~SGO)\index[paridx]{SGO!10@\S~10!2@Abs.~2} und alle sonstigen Beschlüsse, gegen die nicht explizit ein Rechtsmittel vorgesehen ist.\footnote{Vgl. \S~13 Abs.~6~SGO\index[paridx]{SGO!13@\S~13!6@Abs.~6}, ebenso \cite[5]{LSGBB147}.}
 
-Unanfechtbare Beschlüsse dürften in der Regel eindeutig der Verfahrensakte zuzuordnen sein.
-Eine Veröffentlichung muss daher nicht erfolgen.
-Soweit eine Veröffentlichung nicht erfolgt, gilt aber auch die fünfjährige Aufbewahrungsfrist für Akten, anstatt der unbegrenzten Aufbewahrungspflicht für Urteile.
+Unanfechtbare Beschlüsse dürften in der Regel der Verfahrensakte zuzuordnen sein.
+Eine Veröffentlichung muss daher nicht zwingend erfolgen.
+Allerdings ist ihr Inhalt zuweilen für das Urteil von Bedeutung.
+Insbesondere betrifft das Entscheidungen zur Besetzung (vgl. auch \ref{Zusammensetzung:Spruchkoerper:Befangenheitsbesorgnis}).
+Soweit ein Beschluss gesondert begründet wird, diese Begründung sich aber nicht unbedingt im Urteil wiederfinden soll (bspw. um den Urteilstext nicht unnötig aufzublähen oder zu verkomplizieren), kann es ratsam sein, auch unanfechtbare, verfahrensleitende Beschlüsse zu veröffentlichen.
+
+Soweit eine Veröffentlichung erfolgt, wäre prinzipiell die fünfjährige Aufbewahrungsfrist nach \S~14 Abs.~5 S.~1~SGO\index[paridx]{SGO!14@\S~14!5@Abs.~5} einschlägig.
+Allerdings ersetzt eine Veröffentlichung in diesen Fällen häufig die Aufnahme der entsprechenden -- für das Verfahren durchaus bedeutsame -- Tatsachen und Erwägungen.
+Eine unbegrenzte Aufbewahrung entsprechend den Urteilen (\S~14 Abs.~5 S.~2~SGO\index[paridx]{SGO!14@\S~14!5@Abs.~5}) ist dann zulässig, da insbesondere rechtliche Erwägungen für die Parteiöffentlichkeit relevant sind.
 
 % Sonderfall Verweisung an den Senat des BSG → oder ist das verfahrensbeendend? Mal BSG-Praxis angucken!
 
