Roter Oktober Zitat gefixt

--- a/Anrufung.tex
+++ b/Anrufung.tex
@@ -1,5 +1,5 @@
 % \begin{refsection}
-\chapterpreamble{\enquote{\enquote{Gestatten Sie das?} -- \textit{(nickt)} -- \enquote{Ohne Papiere?} -- \enquote{Ohne Papiere!}} --- Jagd auf Roter Oktober (US, 1990).}
+\chapterpreamble{\enquote{\emph{Borodin:}~\enquote{Gestatten die das?}\\ \emph{Ramius:}~\enquote{Joah…}\\ \emph{Borodin:}~\enquote{Ohne Papiere?}\\ \emph{Ramius:}~\enquote{Ohne Papiere!}}\\ --- Jagd auf Roter Oktober (US, 1990)}
 
 \chapter{Die Anrufung}
 \label{Anrufung}
