--- a/sghandbuch.template.tex
+++ b/sghandbuch.template.tex
@@ -8,9 +8,7 @@ für die Piratenpartei Deutschland und Untgliederungen\\
 \normalsize{\documentversion}}
 
 \usepackage{blindtext}
-\ifthenelse{\boolean{isDraft}}
-	{\usepackage[onehalfspacing]{setspace}}
-	{}
+
 \addbibresource{sghandbuch.bib}
 \newindex[Urteilsverzeichnis]{ruling}
 \newindex[Stichwortverzeichnis]{idx}
@@ -27,7 +25,7 @@ für die Piratenpartei Deutschland und Untgliederungen\\
 \thispagestyle{empty}		% Seitennummerierung für Titelseite unterdrücken
 
 % Widmung (Zitat)
-\onecolumn			% Einspaltenlayout anschalten
+\togglecolumnmode			% Einspaltenlayout anschalten
 \thispagestyle{empty}		% Seitennummerierung eine Seite unterdrücken
 \hfill				% Zentrierung 
 \vfill				% Zentrierung
@@ -47,9 +45,7 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 \hfill				% Zentrierung
 \vfill				% Zentrierung
 \clearpage			% Seitenende
-\ifthenelse{\boolean{isDraft}}	% Wenn _kein_ Draft:
-	{}
-	{\twocolumn}			% Wieder ins Zweitspaltenlayout wechselns		
+\togglecolumnmode		% Wieder ins Zweitspaltenlayout wechselns
 
 \renewcommand{\contentsname}{Inhaltsübersicht}
 \pdfbookmark{\contentsname}{toc}
@@ -85,7 +81,7 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 \appendix
 \backmatter
 \pagenumbering{roman}
-\onecolumn
+\togglecolumnmode
 
 \printbibliography[heading=bibliography,title={Rechtsprechungsverzeichnis}, type=ruling]
 \printbibliography[heading=bibliography,title={Literaturverzeichnis},nottype=ruling]
