Kommentar für weiteren Inhalt

--- a/Dokumentation.tex
+++ b/Dokumentation.tex
@@ -6,6 +6,8 @@ Interne Kommunikation des Gerichts, auch wertende Notizen einzelner Mitglieder d
 Werden während Verfahren Tonaufzeichnungen angefertigt, sind diese zu löschen, sobald die Parteien das daraus angefertigte Protokoll erhalten und einen Monat keinen Widerspruch erhoben haben, \S~14 Abs.~3~SGO\index[paridx]{SGO!14@\S~14!3@Abs.~3}.
 Die Verfahrensakte ist fünf Jahre nach Abschluss des Verfahrens aufzubewahren, Urteile unbefristet, \S~14~Abs.~5~SGO\index[paridx]{SGO!14@\S~14!5@Abs.~5}.}
 
+% ToDo: Aktenführung (formal): Was gehört in die Akte, wie baut man sie auf, Formate etc.
+
 \chapter{Dokumentation und Rechenschaftslegung}
 \label{Dokumentation}
 Die Dokumentationspflichten der Schiedsgerichte sind in \S~14~SGO\index[paridx]{SGO!14@\S~14} geregelt.
