--- a/sghandbuch.template.tex
+++ b/sghandbuch.template.tex
@@ -72,7 +72,7 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 
 \input{Verfahrensarten.tex}
 
-\input{Ordnungsmaßnahmen.tex}
+\input{Ordnungsmassnahmen.tex}
 
 \input{Urteilsaufbau.tex}
 
@@ -81,6 +81,11 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 \input{Instanzenzug.tex}
 
 \appendix
+
+\input{A_Schemata.tex}
+
+\input{A_Vorlagen.tex}
+
 \backmatter
 \pagenumbering{roman}
 \togglecolumnmode
