Rubrum ausgelagert, Ladung ergänzt

--- a/A_Vorlagen.tex
+++ b/A_Vorlagen.tex
@@ -32,8 +32,8 @@ Bitte sende uns eine solche Vollmacht bzw. die Dokumentation des entsprechenden 
 
 Wir bitten dich zur Nachbesserung mit Frist zum (Datum).
 
-\section{Eröffnungsablehnung}
-\label{Vorlage:Eröffnungsablehnung}
+\section{Rubrum}
+\label{Vorlage:Rubrum}
 Aktenzeichen\\
 Datum\\
 Beschluss zu (Aktenzeichen)\\
@@ -50,6 +50,10 @@ vertreten durch (Vertretung)
 
 wegen (Prozessgrund)
 
+\section{Eröffnungsablehnung}
+\label{Vorlage:Eröffnungsablehnung}
+(Rubrum)
+
 wird das Verfahren gemäß (Umlauf-)beschluss vom (Datum) nicht eröffnet.
 
 I.\\
@@ -62,21 +66,7 @@ II.\\
 
 \section{Eröffnungsbeschluss}
 \label{Vorlage:Eröffnungsbeschluss}
-Aktenzeichen\\
-Datum\\
-Beschluss zu (Aktenzeichen)\\
-
-In dem Verfahren (Aktenzeichen)
-
-(Aufzählung der Antragsteller*innen)\\
-vertreten durch (Vertretung)
-
-gegen
-
-(Aufzählung der Antragsgegner*innen)\\
-vertreten durch (Vertretung)
-
-wegen (Prozessgrund)
+(Rubrum)
 
 wird das Verfahren gemäß (Umlauf-)beschlusses vom (Datum) mit dem Aktenzeichen (Aktenzeichen) eröffnet.
 Die Antragsschrift ist angehängt.
@@ -98,23 +88,32 @@ Das Landesschiedsgericht hat weiterin beschlossen:
 %\section{Besetzungsänderung} % ???
 %\label{Vorlage:Besetzungsänderung}
 
+\section{Ladung zur Verhandlung}
+\label{Vorlage:Verhandlungsladung}
+(Rubrum)
+
+hat das Schiedsgericht durch die Richter*innen (Aufzählung der an der Beschlussfassung beteiligten Richter*innen) am (Datum) beschlossen:\\
+\begin{enumerate}
+\item	Die mündliche Verhandlung findet als mündliche Präsenzsitzung am (Verhandlungsdatum) um (Uhrzeit) in (Verhandlungsort mit Postanschrift und Raum) statt.
+\item	Die Verhandlung ist öffentlich.
+	Die Öffentlichkeit kann nur auf Antrag ausgeschlossen werden, \SSS~9 Abs.~4, 10 Abs.~7~SGO.\index[paridx]{SGO!9@\S~9!4@Abs.~4}\index[paridx]{SGO!10@\S~10!4@Abs.~4}
+\item	Den Verfahrensparteien wird aufgegeben, folgende Fragen bis zum (Vorbereitungsdatum) zu beantworten:
+	\begin{enumerate}
+	\item (Fragen)
+	\end{enumerate}
+\item	Die Beteiligten mögen unverzüglich, spätestens jedoch bis zum (Vorbereitungsdatum) begründen, zu welchen Beweisthemen Zeug*innen benannt werden.
+	Sofern kein Beweisthema konkret benannt wird oder dieses mit dem Streitgegenstand nicht in ausreichendem Zusammenhang steht, wird eine Ladung oder Anhörung der Zeug*innen unterbleiben.
+\item	Für Anträge, Beweise etc. gilt Frist bis zum (Vorbereitungsdatum).
+\end{enumerate}
+
+Vorsorglich weist das (Schiedsgericht) darauf hin, dass ein Antrag auf Terminverlegung wegen Verhinderung begründet werden muss.
+Das (Schiedsgericht) kann auch in Abwesenheit verhandeln, \S~10 Abs.~5~SGO.\index[paridx]{SGO!10@\S~10!5@Abs.~5}
+
+Fristversäumnis, verspäteter Vortrag und verspätete Benennung von Zeug*innen kann dazu führen, dass der Vortrag nicht berücksichtigt und/oder die Zeug*innen nicht gehört werden.
+
 \section{Einstweilige Anordnung}
 \label{Vorlage:Einstweilige}
-Aktenzeichen\\
-Datum\\
-Beschluss zu (Aktenzeichen)\\
-
-In dem Verfahren (Aktenzeichen)
-
-(Aufzählung der Antragsteller*innen)\\
-vertreten durch (Vertretung)
-
-gegen
-
-(Aufzählung der Antragsgegner*innen)\\
-vertreten durch (Vertretung)
-
-wegen (Prozessgrund)
+(Rubrum)
 
 hat das Schiedsgericht durch die Richter*innen (Aufzählung der an der Beschlussfassung beteiligten Richter*innen) aufgrund ([fern-]mündlicher Verhandlung vom [Verhandlungsdatum] / schriftlichen Verfahrens) am (Datum) beschlossen:\\
 (Tenor der einstweiligen Anordnung)
@@ -129,21 +128,7 @@ II.\\
 
 \section{Urteil}
 \label{Vorlage:Urteil}
-Aktenzeichen\\
-Datum\\
-Beschluss zu (Aktenzeichen)\\
-
-In dem Verfahren (Aktenzeichen)
-
-(Aufzählung der Antragsteller*innen)\\
-vertreten durch (Vertretung)
-
-gegen
-
-(Aufzählung der Antragsgegner*innen)\\
-vertreten durch (Vertretung)
-
-wegen (Prozessgrund)
+(Rubrum)
 
 hat das Schiedsgericht durch die Richter*innen (Aufzählung der an der Beschlussfassung beteiligten Richter*innen) aufgrund ([fern-]mündlicher Verhandlung vom [Verhandlungsdatum] / schriftlichen Verfahrens) am (Datum) beschlossen:\\
 (Tenor)
