Schema mündl. Verhandlung

--- a/A_Schemata.tex
+++ b/A_Schemata.tex
@@ -46,5 +46,18 @@ Hierzu ausführlich: Kapitel~\ref{Anrufung}.
 \item Weiterbestehen der Anrufungskriterien
 \end{enumerate}
 
+\section{Mündliche Verhandlung}
+\begin{enumerate}
+\item Feststellung der Beschlussfähigkeit des Gerichts
+\item Hinweis zur Ordnung der Verhandlung
+\item Hinweise zur Protokollierung, ggf. zu Aufzeichnungen
+\item Feststellung des Erscheinens oder Nichterscheinens der Parteien und ihrer Vertretungen
+\item Einführung in den Verfahrensgegenstand (Sachverhalt, ggf. vorläufige Rechtsauffassung}
+\item Anhörung der Parteien
+\item Anhörung und ggf. Befragung von Zeugen
+\item [im Falle von Ordnungsmaßnahmen] Letztes Wort des Betroffenen
+\item Urteilsverkündung bzw. Ankündigung des weiteren Verfahrens
+\end{enumerate}
+
 \section{Begründetheit}
 Die Prüfung der Begründetheit einer Klage richtet sich vor allem nach der Klageart.
