--- a/A_Schemata.tex
+++ b/A_Schemata.tex
@@ -52,7 +52,7 @@ Hierzu ausführlich: Kapitel~\ref{Anrufung}.
 \item Hinweis zur Ordnung der Verhandlung
 \item Hinweise zur Protokollierung, ggf. zu Aufzeichnungen
 \item Feststellung des Erscheinens oder Nichterscheinens der Parteien und ihrer Vertretungen
-\item Einführung in den Verfahrensgegenstand (Sachverhalt, ggf. vorläufige Rechtsauffassung}
+\item Einführung in den Verfahrensgegenstand (Sachverhalt, ggf. vorläufige Rechtsauffassung)
 \item Anhörung der Parteien
 \item Anhörung und ggf. Befragung von Zeugen
 \item [im Falle von Ordnungsmaßnahmen] Letztes Wort des Betroffenen
