--- a/Zulaessigkeit.tex
+++ b/Zulaessigkeit.tex
@@ -32,7 +32,7 @@ Wichtig ist dabei, besonders auf die Rechte der klagenden Partei zu achten und d
 Zur Nachbesserung im Allgemeinen wird auf den Abschnitt \ref{Anrufung:Beschluss:Nachbesserung} (S. \pageref{Anrufung:Beschluss:Nachbesserung}) verwiesen.
 Wird nicht nachgebessert, ist ein Endurteil zu erlassen, dass die Klage aus dem nicht nachgebesserten Grund als unzulässig ablehnt.
 
-Eine Rücknahme der Eröffnung nicht möglich, da sie in der SGO nicht vorgesehen ist.
+Eine Rücknahme der Eröffnung ist nicht möglich, da sie in der SGO nicht vorgesehen ist.
 Insbesondere eine analoge Anwendung des \S~10 Abs.~1 SGO\index[paridx]{SGO!10@\S~10!1@Abs.~1} scheidet aus,\footnote{So aber fehlerhaft das Bundesschiedsgericht, \cite{BSGPP100127862}.} dies allein schon, da dieser Absatz der SGO das Verfahren und nicht etwa die Eröffnung regelt.\footnote{Dieser Beschluss ist in \S~8 Abs.~5 SGO\index[paridx]{SGO!8@\S~8!5@Abs.~5} geregelt.}
 
 \subsection{Fehlende Schlichtung}
